ToDoList Key Addition in Array of Object

--- a/66_React_Part3_4/To_Do_List/src/App.css
+++ b/66_React_Part3_4/To_Do_List/src/App.css
@@ -12,7 +12,7 @@
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 5em #646cffaa);
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
@@ -27,9 +27,21 @@
   }
 }
 
+@keyframes logo-spin1 {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(-360deg);
+  }
+}
+
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+    animation: logo-spin infinite 5s linear;
+  }
+  a:nth-of-type(1) .logo {
+    animation: logo-spin1 infinite 5s linear;
   }
 }
 
